--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -92,9 +92,7 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
