--- a/build.xml
+++ b/build.xml
@@ -71,5 +71,11 @@
 
     -->
 
+    <!--PATH LIB-->
+    <path id="classpath.test">
+        <pathelement location="lib/junit-4.12.jar"/>
+        <pathelement location="lib/hamcrest-core-1.3.jar"/>
+        <pathelement location="${main.build.dir}"/>
+    </path>
 
 </project>
