--- a/build.xml
+++ b/build.xml
@@ -72,7 +72,7 @@
     -->
 
     <!--PATH LIB-->
-    <path id="classpath.test">
+    <path id="test.classpath">
         <pathelement location="lib/junit-4.12.jar"/>
         <pathelement location="lib/hamcrest-core-1.3.jar"/>
         <pathelement location="${main.build.dir}"/>
