--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/Cipher.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.junit-4.12.jar=lib/junit-4.12.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -46,6 +47,7 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
+    ${file.reference.junit-4.12.jar}:\
     ${libs.junit_4.classpath}:\
     ${libs.hamcrest.classpath}
 javac.test.processorpath=\
