--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/Cipher.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.hamcrest-core-1.3.jar=lib/hamcrest-core-1.3.jar
 file.reference.junit-4.12.jar=lib/junit-4.12.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -48,8 +49,7 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${file.reference.junit-4.12.jar}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${file.reference.hamcrest-core-1.3.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -94,9 +94,7 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
