--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -94,7 +94,9 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${build.test.classes.dir}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.12.jar}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
