[Edit] gitignore for jacoco reports

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ nbdist/
 # http://www.sonarlint.org/commandline/
 # SonarLint working directories, configuration files (including credentials)
 .sonarlint/
+
+# Jacoco #
+.jacocoverage/
